[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/poison_gas.png" type="Texture" id=1]
[ext_resource path="res://scripts/Spore.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="Spore" type="Sprite"]
position = Vector2( 184, 144 )
z_index = 1
z_as_relative = false
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
